deployments/k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitbyte-deployment
  namespace: newton-app
  labels:
    app: fitbyte
spec:
  selector:
    matchLabels:
      app: fitbyte
  template:
    metadata:
      labels:
        app: fitbyte
    spec:
      containers:
        - name: fitbyte
          image: apronny/fitbyte:1.0.0-beta1 # Adjust your image name and version
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /app/.env
              subPath: .env
              readOnly: true
          livenessProbe:
            httpGet:
              path: /v1/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /v1/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 400m
              memory: 800M
            limits:
              memory: 800M
      volumes:
        - name: config-volume
          configMap:
            name: newton-app-fitbyte-configmap
            items:
              - key: .env
                path: .env
